sms service , email service

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/bharathSaiT/NotifyHub#readme",
   "dependencies": {
+    "nodemailer": "^6.9.9",
     "twilio": "^4.22.0"
   }
 }
