--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "A central service for managing and delivering notifications across various channels",
   "main": "notificationSender.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.js$"
   },
   "repository": {
     "type": "git",
@@ -18,6 +23,7 @@
   "homepage": "https://github.com/bharathSaiT/NotifyHub#readme",
   "dependencies": {
     "firebase-admin": "^12.0.0",
+    "jest": "^29.7.0",
     "nodemailer": "^6.9.9",
     "twilio": "^4.22.0"
   }
